tests/ui/parser/int-literal-too-large-span.stderr
error: integer literal is too large
  --> $DIR/int-literal-too-large-span.rs:4:5
   |
LL |     9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: value exceeds limit of `340282366920938463463374607431768211455`

error: aborting due to 1 previous error

